Update README + clean repo

--- a/newtab.html
+++ b/newtab.html
@@ -9,6 +9,7 @@
 </head>
 
 <body>
+
     <div class="bg"></div>
     <div class="grain"></div>
 
@@ -90,6 +91,14 @@
                     citoyen :
                     services publics, santé, démarches, météo, accès rapide… <b>sans tracking</b>.
                 </p>
+                <div class="shareBox">
+                    <a id="installLink"
+                    target="_blank"
+                        href="https://github.com/jlb30350/souverain-newtab-extension/releases/latest/download/souverain-newtab.zip">
+                        Télécharger l’extension (ZIP)
+                    </a>
+                </div>
+
 
             </div>
 
