lien en coulier

--- a/newtab.html
+++ b/newtab.html
@@ -92,10 +92,10 @@
                     services publics, santé, démarches, météo, accès rapide… <b>sans tracking</b>.
                 </p>
                 <div class="shareBox">
-                    <a id="installLink"
-                    target="_blank"
+                    <a id="installLink" target="_blank"
                         href="https://github.com/jlb30350/souverain-newtab-extension/releases/latest/download/souverain-newtab.zip">
-                        Télécharger l’extension (ZIP)
+                        Télécharger l’extension (ZIP) ou <a
+                            href="https://github.com/jlb30350/souverain-newtab-extension">Cliquez sur ce lien</a>
                     </a>
                 </div>
 
