--- a/newtab.html
+++ b/newtab.html
@@ -86,18 +86,22 @@
 
             <div class="modalBody">
                 <p class="modalP">
-                    <b>Souverain</b> est une <b>extension</b> qui transforme votre “Nouvel onglet” en portail
-                    citoyen :
-                    services publics, santé, démarches, météo, accès rapide… <b>sans tracking</b>.
-                </p>
+                <div class="slogan">
+                    <strong>Le Nouvel Onglet Français.</strong><br>
+                    Rapide, utile, sans tracking. Souverain.fr est une extension et non un nom de domaine qui transforme
+                    votre “Nouvel
+                    onglet” en portail citoyen :
+                    services publics, santé, démarches, météo, accès rapide.
+                </div>
+
+
                 <div class="shareBox">
                     <a id="installLink" target="_blank"
                         href="https://github.com/jlb30350/souverain-newtab-extension/releases/latest/download/souverain-newtab.zip">
-                        Télécharger l’extension (ZIP) ou <a
-                            href="https://github.com/jlb30350/souverain-newtab-extension">Cliquez sur ce lien</a>
-                    </a>
+                        Télécharger l’extension (ZIP) ou
+                        <a href="https://github.com/jlb30350/souverain-newtab-extension"> Cliquez sur ce lien</a>
                 </div>
-
+                </p>
 
             </div>
 
